--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.3.0",
-    "bootstrap-vue": "^2.23.1",
     "pinia": "^2.1.3",
     "sass": "^1.63.6",
     "vue": "^3.3.4",
@@ -18,7 +16,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
-    "vite": "^4.3.9",
-    "vue-cli-plugin-bootstrap-vue": "~0.8.2"
+    "vite": "^4.3.9"
   }
 }
