--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "dependencies": {
     "pinia": "^2.1.3",
     "sass": "^1.63.6",
+    "swiper": "^9.4.1",
     "vue": "^3.3.4",
+    "vue-i18n": "^9.2.2",
     "vue-popperjs": "^2.3.0",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.2",
+    "vue3-popper": "^1.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
