--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pinia": "^2.1.3",
     "sass": "^1.63.6",
     "swiper": "^9.4.1",
+    "unhead": "^1.1.28",
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
     "vue-popperjs": "^2.3.0",
