--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "swiper": "^9.4.1",
     "unhead": "^1.1.28",
     "vue": "^3.3.4",
+    "vue-easy-lightbox": "^1.16.0",
     "vue-i18n": "^9.2.2",
     "vue-popperjs": "^2.3.0",
     "vue-router": "^4.2.2",
