--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@yeger/vue-masonry-wall": "^4.0.4",
     "pinia": "^2.1.3",
     "sass": "^1.63.6",
     "swiper": "^9.4.1",
@@ -15,6 +16,7 @@
     "vue": "^3.3.4",
     "vue-easy-lightbox": "^1.16.0",
     "vue-i18n": "^9.2.2",
+    "vue-meta": "^3.0.0-alpha.10",
     "vue-popperjs": "^2.3.0",
     "vue-router": "^4.2.2",
     "vue3-popper": "^1.5.0"
