--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vueuse/head": "^1.1.26",
+    "@vueuse/schema-org": "^2.2.0",
     "vite": "^4.3.9"
   }
 }
