--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-meta": "^3.0.0-alpha.10",
     "vue-popperjs": "^2.3.0",
     "vue-router": "^4.2.2",
+    "vue3-perfect-scrollbar": "^1.6.1",
     "vue3-popper": "^1.5.0"
   },
   "devDependencies": {
